--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -18,6 +19,26 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta!</p>
                 <form action="login.php" method="post">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            mail
+                        </span>
+                        <input type="email" name="email" id="imail" placeholder="Seu email" required autocomplete="email" maxlength="30">
+                        <label for="imail">Email</label>
+
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            password
+                        </span>
+                        <input type="password" name="senha" id="isenh" placeholder="Sua senha" required autocomplete="current-password" minlength="8" maxlength="20">
+                        <label for="isenh">Senha</label>
+                    </div>
+                    <input type="submit" value="entrar">
+                    <a href="esqueci.html">
+                        Esqueci a senha
+                    </a>
+
 
                 </form>
 
