--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta!</p>
                 <form action="login.php" method="post">
+
                     <div class="campo">
                         <span class="material-symbols-outlined">
-                            mail
+                            account_circle
                         </span>
                         <input type="email" name="email" id="imail" placeholder="Seu email" required autocomplete="email" maxlength="30">
                         <label for="imail">Email</label>
-
                     </div>
+
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             password
@@ -34,10 +35,16 @@
                         <input type="password" name="senha" id="isenh" placeholder="Sua senha" required autocomplete="current-password" minlength="8" maxlength="20">
                         <label for="isenh">Senha</label>
                     </div>
-                    <input type="submit" value="entrar">
-                    <a href="esqueci.html">
-                        Esqueci a senha
+
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html" class="botao">
+                        Esqueci a senha 
+                        <span class="material-symbols-outlined">
+                        contact_emergency
+                        </span>
                     </a>
+
+                    
 
 
                 </form>
