--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta!</p>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e adentrar em nosso sistema, assim podendo provar de nossos recursos!</p>
                 <form action="login.php" method="post">
 
                     <div class="campo">
